--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.2.1
   intl: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
