--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^5.2.1
   intl: ^0.19.0
   provider: ^6.1.2
+  dialog_flowtter: ^0.3.3
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/dialog_flow_auth.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
