--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   provider: ^6.1.2
   dialog_flowtter: ^0.3.3
   shared_preferences: ^2.1.1
+  table_calendar: ^3.1.2
+  calendar_view: ^1.2.0
+  input_quantity: ^2.4.1
 
 
 dev_dependencies:
